syntax = "proto3";
option go_package = "/pb";
package pb;

message EsMetrics {
	string ID = 1;
	EsMetricsToken token = 2;
	bool cached = 3;
	string ip = 4;
	string model = 5;
	string key = 6;
	uint32 reqBytes = 7;
	uint32 rspBytes = 8;
	uint64 ts = 9;
}

message EsMetricsToken {
	uint32 total = 1;
	uint32 completion = 2;
	uint32 prompt = 3;
}
